--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-starter-kit": "^0.4.3",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "styled-reset": "^1.6.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
