--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "immer": "^2.0.0",
     "moment": "^2.24.0",
+    "polished": "^2.3.3",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-redux": "^6.0.0",
@@ -14,7 +15,8 @@
     "redux-logger": "^3.0.6",
     "redux-starter-kit": "^0.4.3",
     "styled-components": "^4.1.3",
-    "styled-reset": "^1.6.6"
+    "styled-reset": "^1.6.6",
+    "styled-tools": "^1.7.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
